@@ -8,7 +8,7 @@
 # See the file "license.terms" for information on usage and redistribution of
 # this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: http.tcl,v 1.60 2007/03/12 22:08:40 patthoyts Exp $
+# RCS: @(#) $Id$
 
 # Rough version history:
 # 1.0	Old http_get interface.
@@ -24,7 +24,7 @@
 package require Tcl 8.4
 # Keep this in sync with pkgIndex.tcl and with the install directories
 # in Makefiles
-package provide http 2.5.3
+package provide http 2.5.4
 
 namespace eval http {
     variable http
@@ -632,7 +632,7 @@ proc http::data {token} {
     return $state(body)
 }
 proc http::status {token} {
-    variable $token
+    if {![info exists $token]} { return "error" }    
     upvar 0 $token state
     return $state(status)
 }
@@ -957,7 +957,7 @@ proc http::wait {token} {
 	vwait $token\(status)
     }
 
-    return $state(status)
+    return [status $token]
 }
 
 # http::formatQuery --
